[build-dependencies.wasm-builder-runner]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-wasm-builder-runner'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '1.0.4'
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.6'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.frame-executive]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.frame-system-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.integer-sqrt]
version = '0.1.2'

[dependencies.node-primitives]
default-features = false
path = '../primitives'
version = '2.0.0'

[dependencies.pallet-authority-discovery]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.pallet-authorship]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.pallet-babe]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.pallet-balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.pallet-collective]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.pallet-contracts]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.pallet-contracts-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.pallet-contracts-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '0.8.0'

[dependencies.pallet-democracy]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.pallet-elections-phragmen]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.pallet-finality-tracker]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.pallet-grandpa]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.pallet-identity]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.pallet-im-online]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.pallet-indices]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.pallet-membership]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.pallet-offences]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.pallet-randomness-collective-flip]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.pallet-recovery]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.pallet-session]
default-features = false
features = ['historical']
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.pallet-society]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.pallet-staking]
default-features = false
features = ['migrate']
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.pallet-staking-reward-curve]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.pallet-sudo]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.pallet-transaction-payment]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.pallet-transaction-payment-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.pallet-treasury]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.pallet-utility]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.pallet-vesting]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.rustc-hex]
optional = true
version = '2.0'

[dependencies.serde]
version = '1.0.104'
optional = true

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.sp-authority-discovery]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.sp-block-builder]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'

[dependencies.sp-consensus-babe]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '0.8'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.sp-inherents]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.sp-keyring]
git = 'https://github.com/paritytech/substrate.git'
optional = true
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.sp-offchain]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.sp-session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.sp-staking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.sp-transaction-pool]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.sp-version]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dev-dependencies.sp-io]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[features]
default = ['std']
std = [
    'sp-authority-discovery/std',
    'pallet-authority-discovery/std',
    'pallet-authorship/std',
    'sp-consensus-babe/std',
    'pallet-babe/std',
    'pallet-balances/std',
    'sp-block-builder/std',
    'codec/std',
    'pallet-collective/std',
    'pallet-contracts/std',
    'pallet-contracts-primitives/std',
    'pallet-contracts-rpc-runtime-api/std',
    'pallet-democracy/std',
    'pallet-elections-phragmen/std',
    'frame-executive/std',
    'pallet-finality-tracker/std',
    'pallet-grandpa/std',
    'pallet-im-online/std',
    'pallet-indices/std',
    'sp-inherents/std',
    'pallet-membership/std',
    'pallet-identity/std',
    'node-primitives/std',
    'sp-offchain/std',
    'pallet-offences/std',
    'sp-core/std',
    'pallet-randomness-collective-flip/std',
    'sp-std/std',
    'rustc-hex',
    'serde',
    'pallet-session/std',
    'sp-api/std',
    'sp-runtime/std',
    'sp-staking/std',
    'pallet-staking/std',
    'sp-keyring',
    'sp-session/std',
    'pallet-sudo/std',
    'frame-support/std',
    'frame-benchmarking/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-transaction-payment/std',
    'pallet-treasury/std',
    'sp-transaction-pool/std',
    'pallet-utility/std',
    'sp-version/std',
    'pallet-society/std',
    'pallet-recovery/std',
    'pallet-vesting/std',
    'generic-asset/std',
    'bridge/std',
    'new-oracle/std',
    'ls-biding/std',
]

[package]
authors = ['Parity Technologies <admin@parity.io>']
build = 'build.rs'
edition = '2018'
license = 'GPL-3.0'
name = 'node-runtime'
version = '2.0.0'

[dependencies.generic-asset]
default-features = false
path = "modules/generic-asset"

[dependencies.bridge]
default-features = false
path = "modules/bridge"

[dependencies.new-oracle]
default-features = false
path = "modules/new-oracle"

[dependencies.ls-biding]
default-features = false
path = "modules/ls-biding"
