[dev-dependencies.sp-io]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[features]
default = ['std']
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-elections-phragmen/runtime-benchmarks',
    'pallet-identity/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'pallet-treasury/runtime-benchmarks',
    'pallet-session-benchmarking',
    'pallet-staking/runtime-benchmarks',
    'pallet-vesting/runtime-benchmarks',
    'pallet-collective/runtime-benchmarks',
    'pallet-session-benchmarking',
    'pallet-staking/runtime-benchmarks',
    'pallet-im-online/runtime-benchmarks',
]
std = [
    'sp-authority-discovery/std',
    'pallet-authority-discovery/std',
    'pallet-authorship/std',
    'sp-consensus-babe/std',
    'pallet-babe/std',
    'pallet-balances/std',
    'sp-block-builder/std',
    'codec/std',
    'pallet-collective/std',
    'pallet-contracts/std',
    'pallet-contracts-primitives/std',
    'pallet-contracts-rpc-runtime-api/std',
    'pallet-democracy/std',
    'pallet-elections-phragmen/std',
    'frame-executive/std',
    'pallet-finality-tracker/std',
    'pallet-grandpa/std',
    'pallet-im-online/std',
    'pallet-indices/std',
    'sp-inherents/std',
    'pallet-membership/std',
    'pallet-identity/std',
    'node-primitives/std',
    'sp-offchain/std',
    'pallet-offences/std',
    'sp-core/std',
    'pallet-randomness-collective-flip/std',
    'sp-std/std',
    'serde',
    'pallet-session/std',
    'sp-api/std',
    'sp-runtime/std',
    'sp-staking/std',
    'pallet-staking/std',
    'sp-keyring',
    'sp-session/std',
    'pallet-sudo/std',
    'frame-support/std',
    'frame-benchmarking/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-transaction-payment/std',
    'pallet-treasury/std',
    'sp-transaction-pool/std',
    'pallet-utility/std',
    'sp-version/std',
    'pallet-society/std',
    'pallet-recovery/std',
    'pallet-vesting/std',
    'generic-asset/std',
    'bridge/std',
    'new-oracle/std',
    'ls-biding/std',
    'generic-asset-rpc-runtime-api/std',
    'ls-biding-rpc-runtime-api/std',
    'ls-biding-primitives/std',
]

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.2.0'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
optional = true
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.frame-executive]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.frame-system-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.integer-sqrt]
version = '0.1.2'

[dependencies.node-primitives]
default-features = false
path = '../primitives'
version = '2.0.0-alpha.5'

[dependencies.pallet-authority-discovery]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.pallet-authorship]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.pallet-babe]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.pallet-balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.pallet-collective]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.pallet-contracts]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.pallet-contracts-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.pallet-contracts-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '0.8.0-alpha.5'

[dependencies.pallet-democracy]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.pallet-elections-phragmen]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.pallet-finality-tracker]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.pallet-grandpa]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.pallet-identity]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.pallet-im-online]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.pallet-indices]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.pallet-membership]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.pallet-offences]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.pallet-randomness-collective-flip]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.pallet-recovery]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.pallet-session]
default-features = false
features = ['historical']
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.pallet-session-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
optional = true
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.pallet-society]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.pallet-staking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.pallet-staking-reward-curve]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.pallet-sudo]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.pallet-transaction-payment]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.pallet-transaction-payment-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.pallet-treasury]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.pallet-utility]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.pallet-vesting]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.serde]
optional = true
version = '1.0.102'

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.sp-authority-discovery]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.sp-block-builder]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.sp-consensus-babe]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '0.8.0-alpha.5'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.sp-inherents]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.sp-keyring]
git = 'https://github.com/paritytech/substrate.git'
optional = true
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.sp-offchain]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.sp-session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.sp-staking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.sp-transaction-pool]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.sp-version]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'
[build-dependencies.wasm-builder-runner]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-wasm-builder-runner'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '1.0.5'

[dependencies.generic-asset]
default-features = false
path = "../pallets/generic-asset"

[dependencies.bridge]
default-features = false
path = "../pallets/bridge"

[dependencies.new-oracle]
default-features = false
path = "../pallets/new-oracle"

[dependencies.ls-biding]
default-features = false
path = "../pallets/ls-biding"

[dependencies.generic-asset-rpc-runtime-api]
default-features = false
path = "../pallets/generic-asset/rpc/runtime-api"

[dependencies.ls-biding-rpc-runtime-api]
default-features = false
path = "../pallets/ls-biding/rpc/runtime-api"

[dependencies.ls-biding-primitives]
default-features = false
path = "../pallets/ls-biding/primitives"

[package]
authors = ['Parity Technologies <admin@parity.io>']
build = 'build.rs'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'GPL-3.0'
name = 'node-runtime'
repository = 'https://github.com/paritytech/substrate/'
version = '2.0.0-alpha.5'
