[[bench]]
harness = false
name = 'import'

[dependencies]
fs_extra = '1'
log = '0.4.8'
tempfile = '3.1.0'
wabt = '0.9.2'

[dependencies.codec]
package = 'parity-scale-codec'
version = '1.2.0'

[dependencies.frame-support]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.frame-system]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.node-executor]
path = '../executor'
version = '2.0.0-alpha.5'

[dependencies.node-primitives]
path = '../primitives'
version = '2.0.0-alpha.5'

[dependencies.node-runtime]
path = '../runtime'
version = '2.0.0-alpha.5'

[dependencies.pallet-balances]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.pallet-contracts]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.pallet-grandpa]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.pallet-indices]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.pallet-session]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.pallet-society]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.pallet-staking]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.pallet-timestamp]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.pallet-transaction-payment]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.pallet-treasury]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.sc-block-builder]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '0.8.0-alpha.5'

[dependencies.sc-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '0.8.0-alpha.5'

[dependencies.sc-client-api]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.sc-client-db]
features = ['kvdb-rocksdb']
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '0.8.0-alpha.5'

[dependencies.sc-executor]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '0.8.0-alpha.5'

[dependencies.sp-api]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.sp-block-builder]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.sp-blockchain]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '0.8.0-alpha.5'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.sp-finality-tracker]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.sp-inherents]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.sp-io]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.sp-keyring]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.sp-timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.substrate-test-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-dev'

[package]
authors = ['Parity Technologies <admin@parity.io>']
description = 'Test utilities for Substrate node.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'GPL-3.0'
name = 'node-testing'
publish = true
repository = 'https://github.com/paritytech/substrate/'
version = '2.0.0-alpha.5'

[dev-dependencies]
criterion = '0.3.0'

[dev-dependencies.sc-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '0.8.0-alpha.5'

[dev-dependencies.sc-service]
features = ['rocksdb']
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '0.8.0-alpha.5'
