[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
license = 'GPL-3.0'
name = 'node-transaction-factory'
version = '0.8.0'

[dependencies]
log = '0.4.8'

[dependencies.codec]
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.sc-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '0.8.0'

[dependencies.sc-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '0.8'

[dependencies.sc-client-api]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.sc-service]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '0.8'

[dependencies.sp-api]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.sp-block-builder]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.sp-blockchain]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '0.8'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'
